# libcosim-consumer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  run_conan_install.sh
app/: CMakeLists.txt  c_main.cpp  cpp_main.cpp  main.cpp
include/: consumer.hpp
src/: CMakeLists.txt  consumer.cpp  cpp_main.cpp
